<resources>

    <string name="app_name">Counter Game</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_main">Shall We Play A Game?</string>
    <string name="save_config">Save As Default Configuration</string>
    <string name="begin_game">Begin Game</string>
    <string name="name_label">Name:</string>
    <string name="server_ip_code">Server\'s IP Code:</string>
    <string name="remove_player">Remove Player</string>
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_type">Player Type</string>
    <string name="guest">Guest</string>
    <string name="save_config_as_default">Save this Configuration as the Default</string>
    <string name="start_the_game">Start Game!</string>

    <string name="dialog_continue_label">Continue Playing Game</string>
    <string name="dialog_quit_label">Quit</string>
    <string name="dialog_quit_question">Do you really want to quit?</string>
    <string name="local_tab">Local Game</string>
    <string name="remote_tab">Remote Game</string>

    <string name="local_button">L O C A L</string>
    <string name="network_button">N E T W O R K</string>
    <string name="easy_button">EASY</string>
    <string name="hard_button">HARD</string>
    <string name="network_player_button">NETWORK PLAYER</string>
    <string name="title">Q U A R T O</string>
    <string name="play_button">P L A Y</string>
    <string name="ip_local">IP CODE: </string>
    <string name="ip_network">ENTER IP CODE: </string>

</resources>