<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:background="@drawable/yokohonda_palm_texture"

        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="180sp"
        android:textColor="@color/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/local_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/local_button"
            android:background="@color/pink"

            android:textColor="@color/text"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/network_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/network_button"
            android:background="@color/black"

            android:textColor="@color/text"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/easy_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:layout_margin="15dp"

            android:text="@string/easy_button"
            android:background="@drawable/palm_texture_gray"

            android:textColor="@color/text"
            android:textSize="80sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hard_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"

            android:text="@string/hard_button"
            android:background="@drawable/palm_texture_gray"

            android:textColor="@color/text"
            android:textSize="80sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/network_player_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:layout_margin="15dp"

            android:text="@string/network_player_button"
            android:background="@drawable/palm_texture_gray"

            android:textColor="@color/text"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ip_button"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/pink"

            android:text="@string/ip_local"
            android:textColor="@color/text"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ip_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink"
            android:paddingLeft="20dp"

            android:text="ENTER SERVER'S IP CODE HERE"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:textSize="40sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/turquoise"

        android:textSize="80sp"
        android:textStyle="bold"
        android:text="@string/play_button"
        android:textColor="@color/text"/>

</LinearLayout>